Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-662

[C++] ParquetException must be explicitly exported in dynamic libraries

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • cpp-1.0.0
    • parquet-cpp
    • None

    Description

      This arose in ARROW-237. Because parquet::ParquetException is header-only, depending on the compiler, 3rd-party libraries may not be able to throw and/or catch exceptions that are recognized as such by all parties (for example, if 3rd-party implements parquet::MemoryAllocator and needs to throw an exception, it may not be recognized). On gcc this is current working but on LLVM / OS X it is not.

      Attachments

        Activity

          People

            wesm Wes McKinney
            wesm Wes McKinney
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: