PARQUET-662: Compile ParquetException implementation and explicitly export

This was causing downstream failure in ARROW-237. Now thirdparty libraries can safely throw `ParquetException` and be properly recognized on both ends.

Author: Wes McKinney <wesm@apache.org>

Closes #139 from wesm/PARQUET-662 and squashes the following commits:

c1458d2 [Wes McKinney] Move ParquetException impl to object code, explicitly export. Add LINKAGE option to ADD_PARQUET_TEST, test throwing ParquetException via shared lib. Build shared library in gcc build.

Change-Id: I27160eb88f1b0c651323f30e4b709348112763e9